# stockfighter-solutions

./: README.md  stack.yaml  stockfighter-solutions.cabal
app/: Main.hs
src/: ChockABlock.hs  FirstSteps.hs
