name:                stockfighter-solutions
version:             0.1.0
synopsis:            My soltutions to Stockfighter levels.
description:         Please see README.md
homepage:            https://github.com/ExcaliburZero/stockfighter-solutions
license:             MIT
license-file:        LICENSE
author:              Christopher Wells
maintainer:          cwellsny@ncap.rr.com
copyright:           2016 Christopher Wells
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FirstSteps
                     , ChockABlock
  build-depends:       base >= 4.7 && < 5
                     , stockfighter
  default-language:    Haskell2010

executable stockfighter-solutions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stockfighter
                     , stockfighter-solutions
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ExcaliburZero/stockfighter-solutions
